Doc: pipeline campagne VALIDÉ EN JEU (nouveau joueur → 1-1 gagné, persistance)
Run complet nouveau joueur : intro → coffre GOLD → entrée campagne → choix
des héros (fix selectHeroesIfNeeded) → 1-1 GAGNÉ → CampaignAttack →
recordOutcome persisté. Serveur (framed jar) 0 fatal sur tout le run.

Persistance vérifiée sur la DB live (après 6× 1-1 WIN) :
- STAMINA stored=122 / effective=120 — AUCUN 39M (écran ET DB, first launch)
- GOLD=2040 (loot campagne cumulé, persisté)
- 1-1=3★ totalWins=6 ; 1-2 débloqué=true (déblocage persisté)
=> entrée/choix héros/skills/vagues/loot/récompenses/XP/énergie/progression
   /déblocage niveau suivant : tout validé et persisté.

Reste (non bloquant serveur) : navigation pilote POST-VICTOIRE — rejoue 1-1
au lieu d'aller en 1-2 (revient sur l'aperçu et re-tape FIGHT au lieu de
retourner à la carte ; la logique nextPlayableLevel/déblocage est correcte).

JOURNAL (entrée 2026-07-16 soir) + MEMORY (état courant).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X8YZTb9Pz94YMCoQpe5N13